test/conformance/chainsaw/reports/admission/label/crd-definition.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: verylongresources.verylonggggggggggggggggggggggggggggggggggggggggroup.example.com
spec:
  group: verylonggggggggggggggggggggggggggggggggggggggggroup.example.com
  names:
    kind: VeryLongResource
    listKind: VeryLongResourceList
    plural: verylongresources
    singular: verylongresource
  scope: Namespaced
  versions:
    - name: verylongversion
      served: true
      storage: true
      schema:
        openAPIV3Schema:
          type: object
          properties:
            spec:
              type: object
              properties:
                exampleField:
                  type: string
