test/conformance/chainsaw/reports/admission/label/crd-permission.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-reports-controller
rules:
  - apiGroups: ["verylonggggggggggggggggggggggggggggggggggggggggroup.example.com"]
    resources: ["verylongresources"]
    verbs: ["get", "list", "watch"]

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: kyverno-reports-controller-rolebinding
subjects:
  - kind: ServiceAccount
    name: kyverno-reports-controller
    namespace: kyverno
roleRef:
  kind: ClusterRole
  name: kyverno-reports-controller
  apiGroup: rbac.authorization.k8s.io
