test/conformance/chainsaw/reports/admission/label/resource.yaml
apiVersion: verylonggggggggggggggggggggggggggggggggggggggggroup.example.com/verylongversion
kind: VeryLongResource
metadata:
  name: very-long-resource-name-testing-label-length
  labels:
    env: "test-environment"
spec:
  exampleField: "exampleValue"
