test/conformance/chainsaw/reports/admission/label/assert-report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  generation: 1
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: default
  ownerReferences:
  - apiVersion: verylonggggggggggggggggggggggggggggggggggggggggroup.example.com/verylongversion
    kind: VeryLongResource
    name: very-long-resource-name-testing-label-length
results:
- message: 'validation error: Resource must have valid labels. rule check-label-length
    failed at path /metadata/labels/team/'
  policy: validate-long-resource-labels
  result: fail
  rule: check-label-length
  scored: true
  source: kyverno
scope:
  apiVersion: verylonggggggggggggggggggggggggggggggggggggggggroup.example.com/verylongversion
  kind: VeryLongResource
  name: very-long-resource-name-testing-label-length
  namespace: default
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
