test/conformance/chainsaw/_step-templates/cluster-policyreport-ready.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: policyreport-ready
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: wgpolicyk8s.io/v1alpha2
        kind: PolicyReport
